update index file

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             Add Sale
           </button>
           <div class="data-actions">
-            <button onclick="exportData()" title="Export Data">
+            <!-- <button onclick="exportData()" title="Export Data">
               <i class="fas fa-download"></i>
             </button>
-            <!-- <button onclick="importData()" title="Import Data">
+            <button onclick="importData()" title="Import Data">
               <i class="fas fa-upload"></i>
             </button>
             <button onclick="loadSampleData()" title="Load Sample Data">
