update distribution name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="nav-left">
         <div class="logo">
           <i class="fas fa-truck"></i>
-          <span>MediDist</span>
+          <span>Medi-Care</span>
         </div>
       </div>
       <div class="nav-right">
