--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign Up - Medi-Care</title>
+    <title>Sign Up - Cambridge</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
