--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
           <div class="card-content">
             <h3>Total Sales</h3>
-            <p id="totalSales">₹0</p>
+            <p id="totalSales">Rs 0</p>
           </div>
         </div>
         <div class="card">
@@ -93,7 +93,7 @@
           </div>
           <div class="card-content">
             <h3>Total Profit</h3>
-            <p id="totalProfit">₹0</p>
+            <p id="totalProfit">Rs 0</p>
           </div>
         </div>
         <div class="card">
@@ -102,7 +102,7 @@
           </div>
           <div class="card-content">
             <h3>Total Loss</h3>
-            <p id="totalLoss">₹0</p>
+            <p id="totalLoss">Rs 0</p>
           </div>
         </div>
         <div class="card">
@@ -129,7 +129,7 @@
           </div>
           <div class="card-content">
             <h3>Total Credits</h3>
-            <p id="totalCredits">₹0</p>
+            <p id="totalCredits">Rs 0</p>
           </div>
         </div>
         <div class="card clickable-card" onclick="openClientReceivablesModal()">
@@ -138,7 +138,7 @@
           </div>
           <div class="card-content">
             <h3>Receivables</h3>
-            <p id="totalReceivables">₹0</p>
+            <p id="totalReceivables">Rs 0</p>
           </div>
         </div>
         <div class="card">
@@ -147,14 +147,31 @@
           </div>
           <div class="card-content">
             <h3>Yearly Sales</h3>
-            <p id="yearlySales">₹0</p>
+            <p id="yearlySales">Rs 0</p>
           </div>
         </div>
       </div>
 
       <!-- Sales Table -->
       <div class="table-container">
-        <h2>Sales Data</h2>
+        <div class="table-header">
+          <h2>Sales Data</h2>
+          <div class="search-container">
+            <input
+              type="text"
+              id="salesSearchInput"
+              placeholder="Search by client, invoice, category, product, or batch number..."
+              oninput="searchSales()"
+            />
+            <button
+              onclick="clearSearch()"
+              class="clear-search-btn"
+              title="Clear Search"
+            >
+              <i class="fas fa-times"></i>
+            </button>
+          </div>
+        </div>
         <div class="table-wrapper">
           <table id="salesTable">
             <thead>
